--- a/src/App.css
+++ b/src/App.css
@@ -2,39 +2,33 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+table {
+  border: 1px solid #ddd;
+  border-collapse: collapse;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+td, th {
+  white-space: nowrap;
+  border: 1px solid #ddd;
+  height: 30px;
+  width: 60px;
 }
 
-.App-link {
-  color: #61dafb;
+th {
+  background-color: #eee;
+  position: sticky;
+  top: -1px;
+  z-index: 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+tbody tr td:first-of-type {
+  background-color: #eee;
+  position: sticky;
+  left: -1px;
+  z-index: 1;
 }
 
-td {
-  /* padding: 0.2em; */
-height: 10px;
-  width:200px;
-  border: 1px solid #000000;
+input {
+  width: 50px;
+  height: 25px;
 }
