--- a/src/App.css
+++ b/src/App.css
@@ -5,57 +5,33 @@
 table {
   border: 1px solid #ddd;
   border-collapse: collapse;
+  table-layout: fixed;
+  width: 100%;
 }
 
 td, th {
   white-space: nowrap;
   border: 1px solid #ddd;
   height: 30px;
-  width: 60px;
+  width: 80px;
 }
 
-th {
+thead td {
   background-color: #eee;
   position: sticky;
   top: -1px;
   z-index: 2;
 }
-/*
-.drag  {
-  width: 5px;
-  height: 100%;
-  position: absolute;
-  margin: -20px -5px;
-  cursor: col-resize;
-} */
-
-/* .cell {
-  resize: horizontal;
-  overflow: auto;
-  margin: 0px;
-  padding: 0px;
-  display:block;
-}
-
-th .cell {
-  border: 0;
-  width: auto;
-  height: auto;
-  min-height: 20px;
-  min-width: 20px;
-  cursor: w-resize;
-} */
 
 tbody tr td:first-of-type {
   background-color: #eee;
   position: sticky;
   left: -1px;
   z-index: 1;
-  /* resize: vertical;
-  overflow: auto; */
 }
 
-input {
-  width: 50px;
-  height: 25px;
+td input {
+  width: 95%;
+  height: 95%;
+  font-size: 1em;
 }
