move col header resize handle to right side of cell, tooltip for NaN values in number cols, remove analyses and filter from context menu and create floating buttons at bottom of table

--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,15 @@ td input {
 .NaN-value {
   background-color: #ffe6e6;
 }
+
+.header-handle {
+  width: 10px;
+  position: absolute;
+  right: 0;
+  cursor: e-resize;
+  user-select: none;
+}
+
+/* .header-handle:hover {
+  background-color: blue;
+} */
