remove columns in filter modal

--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,10 @@ td input {
   user-select: none;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 /* .header-handle:hover {
   background-color: blue;
 } */
