--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,14 @@ th {
 	overflow: hidden;
 }
 
+.virtualized-cell {
+	white-space: nowrap;
+	border: 1px solid #ddd;
+	height: 30px;
+	width: 40px;
+	overflow: hidden;
+}
+
 thead th {
 	background-color: #eee;
 	position: sticky;
