--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
 	text-align: center;
 }
 
-table {
+/* table {
 	border: 1px solid #ddd;
 	border-collapse: collapse;
 	table-layout: fixed;
 	width: 100%;
-}
+} */
 
 td,
 th {
@@ -18,29 +18,31 @@ th {
 	overflow: hidden;
 }
 
-.virtualized-cell {
+/* .virtualized-cell {
 	white-space: nowrap;
 	border: 1px solid #ddd;
 	height: 30px;
 	width: 40px;
 	overflow: hidden;
-}
+} */
 
-thead th {
+/* thead th {
 	background-color: #eee;
 	position: sticky;
 	top: -1px;
 	z-index: 1;
-}
+} */
 
-td input {
+/* td input {
 	width: 95%;
 	height: 95%;
 	font-size: 1em;
-}
+} */
 
 .row-number-cell {
 	background-color: #eee;
+	height: 100%;
+	width: 100%;
 	position: sticky;
 	left: -1px;
 	z-index: 1;
@@ -93,13 +95,13 @@ td input {
 	display: flex;
 }
 
-.move-row-up {
+/* .move-row-up {
 	transform: translateY(-30px);
 }
 
 .move-row-down {
 	transform: translateY(30px);
-}
+} */
 
 .border-right {
 	border-right: 1px solid black;
@@ -124,3 +126,53 @@ td input {
 /* .header-handle:hover {
   background-color: blue;
 } */
+
+.ReactVirtualized__Table {
+	display: inline-block;
+	border: 2px solid rgba(0, 0, 0, 0.1);
+}
+
+.ReactVirtualized__Table__headerColumn {
+	display: flex;
+	flex-direction: row;
+	justify-content: left;
+	padding: 0;
+	margin-right: 0 !important;
+}
+
+.ReactVirtualized__Table__headerColumn:first-of-type {
+	margin-left: 0 !important;
+}
+
+.ReactVirtualized__Table__headerTruncatedText {
+	flex: auto;
+}
+
+.DragHandle {
+	flex: 0 0 16px;
+	z-index: 2;
+	cursor: col-resize;
+	color: #0085ff;
+}
+.DragHandle:hover {
+	background-color: rgba(0, 0, 0, 0.1);
+}
+
+.DragHandleActive,
+.DragHandleActive:hover {
+	color: #0b6fcc;
+	z-index: 3;
+}
+
+.DragHandleIcon {
+	flex: 0 0 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.ReactVirtualized__Grid:focus {
+	outline: 0;
+	box-shadow: none !important;
+}
