Add histogram borders, refactor distribution/linear_regression.html, toggle chart elements on and off

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,10 @@ th {
 	opacity: 1;
 }
 
+.non-interactive-cell:hover {
+	cursor: not-allowed;
+}
+
 /* .virtualized-cell {
 	white-space: nowrap;
 	border: 1px solid #ddd;
