--- a/public/analysis-window.css
+++ b/public/analysis-window.css
@@ -28,9 +28,27 @@ body {
 	z-index: 1;
 }
 
+.linearRegressionLine {
+	stroke-width: 2px;
+	stroke: steelblue;
+	z-index: 1;
+}
+
+.linearRegressionLine-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
+	z-index: 1;
+}
+
 .degree2PolyLine {
 	stroke-width: 2px;
 	stroke: green;
+	z-index: 1;
+}
+
+.degree2PolyLine-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
 	z-index: 1;
 }
 
@@ -44,6 +62,12 @@ body {
 	z-index: 1;
 }
 
+.degree3PolyLine-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
+	z-index: 1;
+}
+
 #degree3PolyLine {
 	display: none;
 }
@@ -51,6 +75,12 @@ body {
 .degree4PolyLine {
 	stroke-width: 2px;
 	stroke: saddlebrown;
+	z-index: 1;
+}
+
+.degree4PolyLine-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
 	z-index: 1;
 }
 
@@ -64,33 +94,53 @@ body {
 	z-index: 1;
 }
 
+.degree5PolyLine-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
+	z-index: 1;
+}
+
 .degree6PolyLine {
 	stroke-width: 2px;
 	stroke: thistle;
 	z-index: 1;
 }
 
-div.tooltip {
+.degree6PolyLine-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
+	z-index: 1;
+}
+
+.tooltip {
 	position: absolute;
-	text-align: center;
-	width: 60px;
+	min-width: 60px;
 	height: 28px;
 	padding: 2px;
 	font: 12px sans-serif;
-	background: lightsteelblue;
 	border: 0px;
 	border-radius: 8px;
 	pointer-events: none;
+}
+
+.histogram-border {
+	text-align: center;
+	background: lightsteelblue;
+}
+
+.regression-line {
+	text-align: center;
+	background: rgb(201, 233, 245);
+}
+
+.point {
+	text-align: left;
+	height: 45px;
+	background: lightyellow;
 }
 
 .equation {
 	font-size: 12px;
 	margin-top: 10px;
 	text-align: center;
-}
-
-.linearRegressionLine {
-	stroke-width: 2px;
-	stroke: steelblue;
-	z-index: 1;
 }
