add sidebar, add select by rowID/columnID, refactor headerRenderer, rowHeaders and cellRenderer into their own components

--- a/src/App.css
+++ b/src/App.css
@@ -243,3 +243,7 @@ th {
 	outline: 0;
 	box-shadow: none !important;
 }
+
+.sidebar-column-selected {
+	background-color: rgb(160, 185, 225) !important;
+}
