add bar chart, click bars to select rows on table, click legend to select groups, filter by strings

--- a/public/analysis-window.css
+++ b/public/analysis-window.css
@@ -140,6 +140,12 @@ body {
 	background: lightyellow;
 }
 
+.bar {
+	text-align: left;
+	height: 60px;
+	background: lightyellow;
+}
+
 .equation {
 	font-size: 12px;
 	margin-top: 10px;
