--- a/src/App.css
+++ b/src/App.css
@@ -243,3 +243,17 @@ th {
 .sidebar-column-selected {
 	background-color: rgb(160, 185, 225) !important;
 }
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+.fade-in-animated {
+	opacity: 0;
+	animation: fadeIn 1s forwards; /* forwards (animation-fill-mode) retains the style from the last keyframe when the animation ends */
+}
