--- a/public/analysis-window.css
+++ b/public/analysis-window.css
@@ -140,6 +140,12 @@ body {
 	background: lightyellow;
 }
 
+.mean {
+	text-align: left;
+	height: 20px;
+	background: lightgreen;
+}
+
 .bar {
 	text-align: left;
 	height: 60px;
@@ -152,10 +158,55 @@ body {
 	text-align: center;
 }
 
+.table-header {
+	background-color: #e2d7d7;
+	width: 100px;
+	font-weight: bold;
+}
+
+.header-background {
+	background-color: #e2d7d7;
+}
+
+.xxlarge {
+	width: 400px;
+}
+
+.large {
+	width: 200px;
+}
+
+.medium {
+	width: 150px;
+}
+
+.small {
+	width: 100px;
+}
+
+.xsmall {
+	width: 50px;
+}
+
+.table-subtitle {
+	font-weight: bold;
+	text-align: left;
+	font-size: 1.2em;
+	background-color: rgb(238, 238, 238);
+}
+
+.left {
+	text-align: left;
+}
+
+.right {
+	text-align: right;
+}
+
 .centered {
 	display: none;
 }
 
 .uncentered {
-	display: block;
+	display: none;
 }
