--- a/src/analysis-output/analysis-window.css
+++ b/src/analysis-output/analysis-window.css
@@ -27,23 +27,36 @@ body {
 	text-align: center;
 }
 
-.confidenceBands {
-	stroke-width: 2px;
-	stroke: red;
-	stroke-dasharray: 10, 5;
-	z-index: 1;
-}
-
-.confidenceBandsFit {
-	stroke-width: 2px;
-	stroke: red;
-	stroke-dasharray: 10, 5;
-	z-index: 1;
-}
-
 .linearRegressionLine {
 	stroke-width: 2px;
+	color: steelblue;
 	stroke: steelblue;
+	z-index: 1;
+}
+
+.linearRegressionLineCIFit {
+	stroke-width: 1px;
+	stroke: steelblue;
+	stroke-dasharray: 10, 5;
+	z-index: 1;
+}
+
+.linearRegressionLineCIFit-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
+	z-index: 1;
+}
+
+.linearRegressionLineCIObs {
+	stroke-width: 1px;
+	stroke: steelblue;
+	stroke-dasharray: 10, 5;
+	z-index: 1;
+}
+
+.linearRegressionLineCIObs-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
 	z-index: 1;
 }
 
@@ -56,6 +69,32 @@ body {
 .degree2PolyLine {
 	stroke-width: 2px;
 	stroke: green;
+	z-index: 1;
+}
+
+.degree2PolyLineCIFit {
+	stroke-width: 1px;
+	stroke: green;
+	stroke-dasharray: 10, 5;
+	z-index: 1;
+}
+
+.degree2PolyLineCIFit-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
+	z-index: 1;
+}
+
+.degree2PolyLineCIObs {
+	stroke-width: 1px;
+	stroke: green;
+	stroke-dasharray: 10, 5;
+	z-index: 1;
+}
+
+.degree2PolyLineCIObs-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
 	z-index: 1;
 }
 
@@ -72,6 +111,32 @@ body {
 }
 
 .degree3PolyLine-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
+	z-index: 1;
+}
+
+.degree3PolyLineCIFit {
+	stroke-width: 1px;
+	stroke: darkmagenta;
+	stroke-dasharray: 10, 5;
+	z-index: 1;
+}
+
+.degree3PolyLineCIFit-hitbox {
+	stroke-width: 10px;
+	stroke: transparent;
+	z-index: 1;
+}
+
+.degree3PolyLineCIObs {
+	stroke-width: 1px;
+	stroke: darkmagenta;
+	stroke-dasharray: 10, 5;
+	z-index: 1;
+}
+
+.degree3PolyLineCIObs-hitbox {
 	stroke-width: 10px;
 	stroke: transparent;
 	z-index: 1;
@@ -159,12 +224,14 @@ body {
 }
 
 .table-header {
+	border: 1px solid white;
 	background-color: #e2d7d7;
 	width: 100px;
 	font-weight: bold;
 }
 
 .header-background {
+	border: 1px solid white;
 	background-color: #e2d7d7;
 }
 
@@ -189,6 +256,7 @@ body {
 }
 
 .table-subtitle {
+	border: 1px solid white;
 	font-weight: bold;
 	text-align: left;
 	font-size: 1.2em;
