--- a/src/analysis-output/analysis-window.css
+++ b/src/analysis-output/analysis-window.css
@@ -205,6 +205,20 @@ body {
 	background: lightyellow;
 }
 
+.contingency-tooltip {
+	position: absolute;
+	min-width: 60px;
+	height: 28px;
+	padding: 2px;
+	font: 12px sans-serif;
+	border: 0px;
+	border-radius: 8px;
+	pointer-events: none;
+	text-align: left;
+	height: 60px;
+	background: lightyellow;
+}
+
 .mean {
 	text-align: left;
 	height: 20px;
@@ -215,6 +229,10 @@ body {
 	text-align: left;
 	height: 60px;
 	background: lightyellow;
+}
+
+.bordered {
+	border: 1px solid black;
 }
 
 .equation {
@@ -325,4 +343,8 @@ body {
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
 	background-color: #3e8e41;
+}
+
+.centered-text {
+	text-align: center;
 }
