remove red histogram bars when click elsewhere on chart, improve regression tooltips

--- a/src/analysis-output/analysis-window.css
+++ b/src/analysis-output/analysis-window.css
@@ -192,7 +192,7 @@ body {
 
 .histogram-border {
 	text-align: center;
-	background: lightsteelblue;
+	background: lightyellow;
 }
 
 .regression-line {
