--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@
 
 .toolbar-icon {
   cursor: pointer;
+  user-select: none;
   position: relative;
   display: inline-block;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
   transition: all 0.1s ease-in-out;
 }
 
@@ -17,7 +17,6 @@
   position: absolute;
   z-index: -1;
   opacity: 0;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   transition: opacity 0.1s ease-in-out;
 }
 
